<resources>
    <string name="app_name">ShoeStore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">The Shoe Store</string>
    <string name="login_subtitle">A new shopping experience</string>
    <string name="login_header_user">Username</string>
    <string name="login_header_password">Password</string>
    <string name="hint_password">password...</string>
    <string name="hint_user">example@example.com</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="button_instruction_next">Next</string>
    <string name="button_welcome_next">Next</string>
    <string name="shoe_name">Name:</string>
    <string name="shoe_size">Size:</string>
    <string name="shoe_company">Company:</string>
    <string name="shoe_desc">Description:</string>
    <string name="detail_header">Create the Shoe to be added</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save">Save</string>
    <string name="menu_logout">LogOut</string>
    <string name="welcome_header">Welcome to the Shoe Store</string>
    <string name="instructions_header">Instructions</string>
    <string name="instruction_text">With this app you can\n\n- Add new Show\n- See a list of all your Shoes</string>
</resources>
