<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="com.udacity.shoestore.ui.login.LoginViewModel" />
    </data>

    <!-- ConstraintLayout is used here to provide an adaptable design,
    that is working well for multiple display resolutions and different orientations -->
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginFragment">

        <TextView
            android:id="@+id/text_title"
            style="@style/style_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/roboto"
            android:text="@string/login_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/login_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_title" />

        <TextView
            android:id="@+id/text_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/login_header_user"
            app:layout_constraintBottom_toTopOf="@+id/edit_email"
            app:layout_constraintStart_toStartOf="@+id/edit_email"
            app:layout_constraintTop_toBottomOf="@+id/subtitle"
            app:layout_constraintVertical_bias="0.35000002"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="username"
            android:ems="10"
            android:hint="@string/hint_user"
            android:inputType="textEmailAddress"
            android:text="@{loginViewModel.user}"
            app:layout_constraintBottom_toTopOf="@+id/text_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_user" />

        <TextView
            android:id="@+id/text_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/login_header_password"
            app:layout_constraintBottom_toTopOf="@+id/edit_password"
            app:layout_constraintStart_toStartOf="@+id/edit_password"
            app:layout_constraintTop_toBottomOf="@+id/edit_email" />


        <EditText
            android:id="@+id/edit_password"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:autofillHints="password"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:text="@{loginViewModel.password}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_password" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:onClickListener="@{() -> loginViewModel.onLoginClicked()}"
            android:text="@string/button_login"
            app:layout_constraintBottom_toTopOf="@+id/button_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_password"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClickListener="@{() -> loginViewModel.onLoginClicked()}"
            android:text="@string/button_register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_login" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>